--- a/AuthenticationApp/Views/HomeView.axaml
+++ b/AuthenticationApp/Views/HomeView.axaml
@@ -11,7 +11,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Design.DataContext>
-        <vm:MainWindowViewModel />
+        <vm:HomeViewModel />
     </Design.DataContext>
 
     <Border Background="#f5f5f5">
